# pi_hole_api

./: .gitignore  README.md  example.py  requirements.txt  setup.cfg  sonar-project.properties  testrunner.sh
.github/workflows/: Build-main.yml  Build-test-old.yml  Build-test.yml  build-prod.yml  build-test.yml  pylint.yml  python-package.yml
pihole_api/: __init__.py  _core.py  _dns.py  _list.py  _main.py  api.py  main.py
src/pihole_api/: _core.py  _dns.py  _list.py
tests/: automated-tests.sh  test_api.py
