[metadata]
name = pi_hole_api
version = 0.1.3
author = Oleksandr Kubashov
author_email = okubashov@gmail.com
description = API for pihole
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/XelK/pihole_api
project_urls =
    Bug Tracker = https://github.com/XelK/pihole_api/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
